--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs-extra": "^11.3.0",
     "mongoose": "^8.0.1",
     "pdfkit": "^0.14.0"
   },
